<resources>
    <string name="app_name">ResolutionsDiary</string>
    <string name="diary">Tagebuch</string>
    <string name="write_sentence">Satz geschrieben</string>
    <string name="played_piano">Klavier gespielt</string>
    <string name="youtube_time_limit">YouTube Zeitlimit eingehalten</string>
    <string name="read_sentence">Satz gelesen</string>
    <string name="dailyGoals">Tagesziele</string>
    <string name="ok">OK</string>
    <string name="no_data">keine Daten</string>
    <string name="history">Aufzeichnung</string>
    <string name="lastMonth">letztes Monat</string>
    <string name="nextMonth">nächstes Monat</string>
    <string-array
        name="months">
        <item>Jänner</item>
        <item>Februar</item>
        <item>März</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Dezember</item>
    </string-array>
</resources>
