<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tageszieleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dailyGoals"
        android:textSize="@dimen/textLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <CheckBox
        android:id="@+id/diaryCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/diary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tageszieleTextView" />

    <CheckBox
        android:id="@+id/readingCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_sentence"
        app:layout_constraintStart_toStartOf="@+id/diaryCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/diaryCheckBox" />

    <CheckBox
        android:id="@+id/writingCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_sentence"
        app:layout_constraintStart_toStartOf="@+id/readingCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/readingCheckBox" />

    <CheckBox
        android:id="@+id/pianoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_piano"
        app:layout_constraintStart_toStartOf="@+id/writingCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/writingCheckBox" />

    <CheckBox
        android:id="@+id/youtubeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube_time_limit"
        app:layout_constraintStart_toStartOf="@+id/pianoCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/pianoCheckBox" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="ok_clicked"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/youtubeCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/youtubeCheckBox" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="history_clicked"
        android:text="@string/history"
        app:layout_constraintStart_toEndOf="@+id/okButton"
        app:layout_constraintTop_toTopOf="@+id/okButton" />

</androidx.constraintlayout.widget.ConstraintLayout>